src/cmds/atlassian/snapshots/rtk__cmds__atlassian__jira__tests__sprint_workitems_snapshot.snap
---
source: src/cmds/atlassian/jira.rs
expression: output
---
KEY        TYPE        STATUS      PRI  ASSIGNEE       SUMMARY
----------------------------------------------------------------------------------------------------
DEMO-1234  Story       In Progress H    Alice Smith    Implement JWT authentication for mobile app login
DEMO-1235  Bug         Open        C    Bob Jones      Login endpoint returns 500 on empty password field
DEMO-1236  Task        Open        M                   Add rate limiting to authentication endpoints
